--- a/mysql/mysql_test.yaml
+++ b/mysql/mysql_test.yaml
@@ -1,23 +1,25 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql-server
+  labels:
+    app: mysql-server
 spec:
   replicas: 1
   selector:
     matchLabels:
-      role: mysql-server
+      name: mysql-server
   template:
     metadata:
       labels:
-        role: mysql-server
+        name: mysql-server
     spec:
       containers:
       - name: mysql-server
         image: mysql:5.6
         env:
         - name: MYSQL_DATABASE
-          value: demo
+          value: mysql
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -32,7 +34,7 @@ metadata:
   name: mysql-service
 spec:
   selector:
-          # name: mysql-server
+    name: mysql-server
   ports:
     - name: mysql
       protocol: TCP
